--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-	<link rel="stylesheet" href="css/estilos.css" type="text/css">
+	<link rel="stylesheet" href="CSS/estilos.css" type="text/css">
    <link rel="shortcut icon" href="IMG/adress.jpg">
 	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
